Closed
Bug 1115986
Opened 11 years ago
Closed 11 years ago
Identifier mismatch between JS_GetLatin1InternedStringChars and JS_Latin1InternedStringChars.
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla37
People
(Reporter: arai, Assigned: arai)
References
Details
Attachments
(1 file)
|
961 bytes,
patch
|
terrence
:
review+
|
Details | Diff | Splinter Review |
in jsapi.h
> extern JS_PUBLIC_API(const JS::Latin1Char *)
> JS_GetLatin1InternedStringChars(const JS::AutoCheckCannotGC &nogc, JSString *str);
in jsapi.cpp
> JS_PUBLIC_API(const Latin1Char *)
> JS_Latin1InternedStringChars(const JS::AutoCheckCannotGC &nogc, JSString *str)
| Assignee | ||
Comment 1•11 years ago
|
||
Green on try run: https://treeherder.mozilla.org/#/jobs?repo=try&revision=47c660451d8b
Attachment #8542039 -
Flags: review?(terrence)
Comment 2•11 years ago
|
||
Comment on attachment 8542039 [details] [diff] [review]
Fix JS_GetLatin1InternedStringChars identifier.
Review of attachment 8542039 [details] [diff] [review]:
-----------------------------------------------------------------
Thanks!
Attachment #8542039 -
Flags: review?(terrence) → review+
| Assignee | ||
Comment 3•11 years ago
|
||
thank you for reviewing :D
https://hg.mozilla.org/integration/mozilla-inbound/rev/39e02863f481
Assignee: nobody → arai_a
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
You need to log in
before you can comment on or make changes to this bug.
Description
•