Bug 1115986 - Fix JS_GetLatin1InternedStringChars identifier. r=terrence